--- a/src/app/shared/element-dialog/element-dialog.component.html
+++ b/src/app/shared/element-dialog/element-dialog.component.html
@@ -1,4 +1,5 @@
-<h1 mat-dialog-title>Criar Cadastro</h1>
+<h1 *ngIf="!isChange" mat-dialog-title>Criar Cadastro</h1>
+<h1 *ngIf="isChange" mat-dialog-title>Editar Cadastro</h1>
 <div mat-dialog-content> 
   <mat-form-field>
     <mat-label>ID</mat-label>
@@ -21,6 +22,7 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Criar</button>
+  <button mat-button (click)="onCancel()">Cancelar</button>
+  <button mat-button *ngIf="!isChange" [mat-dialog-close]="data" cdkFocusInitial>Criar</button>
+  <button mat-button *ngIf="isChange" [mat-dialog-close]="data" cdkFocusInitial>Editar</button>
 </div>
