--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <button mat-button style="color: #ECB817;" (click)="openDialog(null)">Add Elemento</button>
+
+        <table mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!-- ID Column -->
             <ng-container matColumnDef="id">
@@ -30,10 +32,10 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> Ações </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button style="color: #ECB817">
+                    <button mat-icon-button (click)="editElement(element)" style="color: #ECB817">
                         <mat-icon>edit</mat-icon>
                       </button>
-                      <button mat-icon-button style="color: #ECB817" >
+                      <button mat-icon-button (click)="deleteElement(element.id)" style="color: #ECB817" >
                         <mat-icon>delete</mat-icon>
                       </button>
                 </td>
