--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="container">
     <span class="header">
-            <strong>Info</strong><p>Soluções inovadoras para mobilidade!</p>
+            <strong>Crud <small>com</small> Angular</strong>
         
     </span>
 </mat-toolbar>
