--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <span class="copyright">My Test Info ©2021</span>
+    <span class="copyright">My Crud Angular ©2021</span>
 </div>
