--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,14 +1,17 @@
 .container{
     display: inline-block;
-    background-color: #ECB817;
+    text-align: center;
+    height: 100px;
+    padding: 20px 0 0;
+    background-image: linear-gradient(to right, #03258C, #0433BF);
     color: #ffff;
 }
 
 .header{
     
-    font-size: 30px;
+    font-size: 40px;
 }
 
-.header > p{
+small{
     font-size: 15px;
 }
