--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <button mat-button style="color: #ECB817;" (click)="openDialog(null)">Add Elemento</button>
+  <button mat-button (click)="openDialog(null)">Add Elemento</button>
 
         <table mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -32,10 +32,10 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> Ações </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button (click)="editElement(element)" style="color: #ECB817">
+                    <button mat-icon-button (click)="editElement(element)" style="color: #72A0A6, hover= #465B5E">
                         <mat-icon>edit</mat-icon>
                       </button>
-                      <button mat-icon-button (click)="deleteElement(element.id)" style="color: #ECB817" >
+                      <button mat-icon-button (click)="deleteElement(element.id)" style="color: #72A0A6, hover= #465B5E" >
                         <mat-icon>delete</mat-icon>
                       </button>
                 </td>
